--- a/app/src/main/res/layout-sw411dp/fragment_conversions.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_conversions.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/convbg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,7 +36,7 @@
                     android:background="@null"
                     android:elevation="10dp"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="DISTANCE"
+                    android:text="@string/distance"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp" />
@@ -48,7 +47,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="MASS"
+                    android:text="@string/mass"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp" />
@@ -59,7 +58,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="VOLUME"
+                    android:text="@string/volume"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp" />
@@ -70,7 +69,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="TIME"
+                    android:text="@string/time"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -82,7 +81,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="CURRENCY"
+                    android:text="@string/currency"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -94,7 +93,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="SPEED"
+                    android:text="@string/speed"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -106,7 +105,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="TEMP."
+                    android:text="@string/temperature_abbreviated"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -119,7 +118,7 @@
                     android:layout_weight="1"
                     android:background="@null"
                     android:foreground="?attr/selectableItemBackground"
-                    android:text="BASE"
+                    android:text="@string/base_representation"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
@@ -336,7 +335,7 @@
                 android:id="@+id/fromLabelConv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="From:"
+                android:text="@string/from"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -385,7 +384,7 @@
                 android:id="@+id/toLabelConv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="To:"
+                android:text="@string/to"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -465,7 +464,7 @@
                 android:id="@+id/fromUnitLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="From:"
+                android:text="@string/from"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -476,7 +475,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:paddingVertical="8dp"
-                android:text="Inches"
+                android:text="@string/distance_inches"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/fromUnitLabel"
                 app:layout_constraintStart_toEndOf="@+id/fromUnitLabel"
@@ -518,7 +517,7 @@
                 android:id="@+id/toUnitLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="To:"
+                android:text="@string/to"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -529,7 +528,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:paddingVertical="8dp"
-                android:text="Feet"
+                android:text="@string/distance_feet"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/toUnitLabel"
                 app:layout_constraintStart_toEndOf="@+id/toUnitLabel"
