--- a/app/src/main/res/layout/new_cpdialog.xml
+++ b/app/src/main/res/layout/new_cpdialog.xml
@@ -116,7 +116,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
-                android:text="No colors found in clipboard"
+                android:text="@string/no_colors_in_clipboard"
                 android:textSize="16sp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/cpLayout"
